# omni-ai-source

./: .env.example  .gitignore  API_ENDPOINTS_SUMMARY.md  AUTHENTICATION_FLOW.md  AUTH_SUMMARY.md  AUTH_TEST_GUIDE.md  CASDOOR-FIX-EXPLAINED.md  CASDOOR_LOGIN_GUIDE.md  CASDOOR_SETUP.md  COLOR_SYSTEM_UPDATE.md  CREATE-ALL-SEED-ENTITIES.md  DARK_MODE_CARD_FIX.md  DASHBOARD_CARD_REFACTOR.md  DESIGN_SYSTEM_ANALYSIS.md  FIGMA_SPEC.md  FINAL_CONFIG.md  FIX_CONNECTION_REFUSED.md  FIX_DUPLICATE_LOGIN.md  FIX_SUMMARY.md  FOLDER_STRUCTURE.md  GLASS_TO_CARD_MIGRATION.md  HOW-TO-CREATE-SEED-DATA.md  INTEGRATION_GUIDE.md  MOCK-DATA-REMOVED.md  PROJECT_SUMMARY.md  QUICK_FIX.md  README.md  README_MINIO.md  RUN_GUIDE.md  SEED-DATA-GUIDE.md  SEED-QUICK-REFERENCE.md  SHADCN_UI_THEME_FIX.md  Tài liệu API - demo n8n (bản rút gọn test nhanh) 299e67a99756807b8314ec5ee4c5fde0.md  ai-providers-refactor-analysis.md  chatbot-refactor-plan.md  clean-code.js  create-frontend-env.ps1  docker-compose.yml  fix-auth-issues.ps1  fix-casdoor-endpoint.ps1  (+6 more)
apps/backend/: .env.example  CHANGELOG.md  Dockerfile  OAUTH_SETUP.md  QUICK_START.md  README.md  check_models.py  docker-compose.yaml  docker-compose.yml  env-example-document  nest-cli.json  package-lock.json  package.json  pyproject.toml  quick-debug.ts  run-migration.js  run_migration.py  setup-encryption.js  setup_db_simple.bat  supabase_schema.sql  test_debug.json  test_sse.py
apps/backend/app/: main.py
apps/backend/docs/: ADD_NEW_OAUTH_CHANNEL.md  API.md  AUTHENTICATION.md  GETTING_STARTED.md  PERMISSIONS.md  README.md
(+1276 files in other folders)
